# ghost_post

./: db.sqlite3  pyproject.toml
courier/: settings.py  urls.py
ghost_post/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
ghost_post/migrations/: 0001_initial.py
ghost_post/templates/: genericform.html  index.html  post.html
